fix(community-side-navigation): fix extra whitespace on ie

--- a/packages/SideNavigation/SideNavigation.scss
+++ b/packages/SideNavigation/SideNavigation.scss
@@ -55,6 +55,7 @@ $desktop: (
 .navLi {
   border-bottom: 1px solid $color-gainsboro;
   align-items: center;
+  font-size: 0;
 }
 
 .active {
